Envio de correo de nueva incidencia

--- a/mercury-server/grails-app/i18n/messages.properties
+++ b/mercury-server/grails-app/i18n/messages.properties
@@ -53,3 +53,42 @@ typeMismatch.java.lang.Long=Property {0} must be a valid number
 typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
+
+issue.assignee=Asignado a
+issue.reporter=Reportador
+
+issueType.bug=Error
+issueType.improvement=Mejora
+issueType.newFeature=Nueva Funcionalidad
+issueType.task=Tarea
+issueType.userstory=Historia de Usuario
+
+priority.blocker=Blocker
+priority.critical=Critica
+priority.major=Mayor
+priority.minor=Menor
+priority.trivial=Trivial
+priority.blocker.plural=Blocker
+priority.critical.plural=Critica
+priority.major.plural=Mayores
+priority.minor.plural=Menor
+priority.trivial.plural=Trivial
+
+status.open=Abierta
+status.inProgress=En Progreso
+status.reopened=Reabierta
+status.resolved=Resuelta
+status.closed=Cerrada
+status.approved=Aprovada
+status.open.plural=Abiertas
+status.inProgress.plural=En Progreso
+status.reopened.plural=Reabiertas
+status.resolved.plural=Resueltas
+status.closed.plural=Cerradas
+status.approved.plural=Aprovadas
+
+resolution.fixed=Corregido
+resolution.wontFix=No se arreglara
+resolution.duplicate=Duplicado
+resolution.incomplete=Incompleto
+resolution.cannotReproduce=No se pudo reproducir
