Correccion en las traducciones de tipos y priorirdades en la lista de incidencias

--- a/mercury-server/grails-app/i18n/messages.properties
+++ b/mercury-server/grails-app/i18n/messages.properties
@@ -57,6 +57,9 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 issue.assignee=Asignado a
 issue.reporter=Reportador
 
+issue.priority=Prioridad
+issue.type=Tipo
+
 issueType.bug=Error
 issueType.improvement=Mejora
 issueType.newFeature=Nueva Funcionalidad
