Filtro por categoria

--- a/mercury-server/grails-app/i18n/messages.properties
+++ b/mercury-server/grails-app/i18n/messages.properties
@@ -59,6 +59,7 @@ issue.reporter=Reportador
 
 issue.priority=Prioridad
 issue.type=Tipo
+issue.category=Categoria
 
 issueType.bug=Error
 issueType.improvement=Mejora
