Mostrar entregas cerradas, abiertas y todas.

--- a/mercury-server/grails-app/i18n/messages.properties
+++ b/mercury-server/grails-app/i18n/messages.properties
@@ -96,3 +96,8 @@ resolution.wontFix=No se arreglara
 resolution.duplicate=Duplicado
 resolution.incomplete=Incompleto
 resolution.cannotReproduce=No se pudo reproducir
+
+
+milestone.statusFilter.open=abiertas
+milestone.statusFilter.closed=cerradas
+milestone.statusFilter.all=todas
