Avances en el activity feed, es en base a comentarios

--- a/mercury-server/grails-app/i18n/messages.properties
+++ b/mercury-server/grails-app/i18n/messages.properties
@@ -103,3 +103,5 @@ resolution.cannotReproduce=No se pudo reproducir
 milestone.statusFilter.open=abiertas
 milestone.statusFilter.closed=cerradas
 milestone.statusFilter.all=todas
+
+comment.issue.create=creo
