Avances en el activity feed, es en base a comentarios

--- a/mercury-server/grails-app/i18n/messages.properties
+++ b/mercury-server/grails-app/i18n/messages.properties
@@ -105,3 +105,4 @@ milestone.statusFilter.closed=cerradas
 milestone.statusFilter.all=todas
 
 comment.issue.create=creo
+comment.issue.comment=comento
