Avances en el activity feed, es en base a comentarios

--- a/mercury-server/grails-app/i18n/messages.properties
+++ b/mercury-server/grails-app/i18n/messages.properties
@@ -104,5 +104,5 @@ milestone.statusFilter.open=abiertas
 milestone.statusFilter.closed=cerradas
 milestone.statusFilter.all=todas
 
-comment.issue.create=creo
-comment.issue.comment=comento
+comment.issue.create=cre&oacute;
+comment.issue.comment=coment&oacute;
