--- a/mercury-server/grails-app/i18n/messages_es.properties
+++ b/mercury-server/grails-app/i18n/messages_es.properties
@@ -29,4 +29,4 @@ typeMismatch.java.lang.Short=La propiedad {0} debe ser un número válido
 typeMismatch.java.math.BigDecimal=La propiedad {0} debe ser un número válido
 typeMismatch.java.math.BigInteger=La propiedad {0} debe ser un número válido
 
-comment.issue.create=creo
+comment.issue.create=cre&oacute;
