--- a/mercury-server/grails-app/i18n/messages.properties
+++ b/mercury-server/grails-app/i18n/messages.properties
@@ -106,3 +106,5 @@ milestone.statusFilter.all=todas
 
 comment.issue.create=cre&oacute;
 comment.issue.comment=coment&oacute;
+comment.issue.resolve=resolvi&oacute;
+comment.issue.close=cerr&oacute;
