Avances en el activity feed, es en base a comentarios

--- a/mercury-server/grails-app/i18n/messages.properties
+++ b/mercury-server/grails-app/i18n/messages.properties
@@ -108,3 +108,4 @@ comment.issue.create=cre&oacute;
 comment.issue.comment=coment&oacute;
 comment.issue.resolve=resolvi&oacute;
 comment.issue.close=cerr&oacute;
+comment.issue.null=edit&oacute;
