MRY-211 No muestra un comentario correcto al asignarse una incidencia

--- a/mercury-server/grails-app/i18n/messages.properties
+++ b/mercury-server/grails-app/i18n/messages.properties
@@ -108,4 +108,5 @@ comment.issue.create=cre&oacute;
 comment.issue.comment=coment&oacute;
 comment.issue.resolve=resolvi&oacute;
 comment.issue.close=cerr&oacute;
+comment.issue.assign=asign&oacute;
 comment.issue.null=edit&oacute;
