--- a/mercury-server/grails-app/i18n/messages.properties
+++ b/mercury-server/grails-app/i18n/messages.properties
@@ -110,3 +110,6 @@ comment.issue.resolve=resolvi&oacute;
 comment.issue.close=cerr&oacute;
 comment.issue.assign=asign&oacute;
 comment.issue.null=edit&oacute;
+
+workspace.new=Nuevo workspace
+workspace.change=Cambiar workspace
