Internacionalizacion de "incidencias"

--- a/mercury-server/grails-app/i18n/messages.properties
+++ b/mercury-server/grails-app/i18n/messages.properties
@@ -113,3 +113,6 @@ comment.issue.null=edit&oacute;
 
 workspace.new=Nuevo workspace
 workspace.change=Cambiar workspace
+
+nectar.tasks=Tareas
+nectar.tasks.lower=tareas
