Traduccion de incidencias por tareas

--- a/mercury-server/grails-app/i18n/messages.properties
+++ b/mercury-server/grails-app/i18n/messages.properties
@@ -114,5 +114,7 @@ comment.issue.null=edit&oacute;
 workspace.new=Nuevo workspace
 workspace.change=Cambiar workspace
 
+nectar.task=Tarea
+nectar.task.lower=tarea
 nectar.tasks=Tareas
 nectar.tasks.lower=tareas
